# rust_demo

./: Cargo.toml  foo.txt  output.txt
algos/: Cargo.toml
algos/src/: lib.rs
algos/src/dynamic_programming/: coin_change.rs  egg_drop.rs  fibonacci.rs  knapsack.rs  longest_common_subsequence.rs  longest_continuous_increasing_subsequence.rs  longest_increasing_subsequence.rs  maximal_square.rs  maximum_subarray.rs  mod.rs  rod_cut.rs
algos/src/graph/: bellman_ford.rs  bfs.rs  dfs.rs  dijkastra.rs  kruskal.rs  mod.rs  prim.rs
algos/src/search/: binary.rs  binary_rec.rs  kth_smallest.rs  linear.rs  mod.rs
algos/src/sort/: bubble.rs  bucket.rs  (+13 more)
demo_macro/: Cargo.toml
demo_macro/src/: lib.rs
lists/src/: fifth.rs  first.rs  fourth.rs  main.rs  second.rs  sixth.rs  third.rs
nomicon/: Cargo.toml
nomicon/src/: arc.rs  carton.rs  main.rs  owner.rs  vec.rs
simple_macro/: Cargo.toml
simple_redis/: Cargo.toml
simple_redis/examples/: hello_redis.rs
simple_redis/src/: connection.rs  delay.rs  lib.rs
simple_web_server/: Cargo.toml
simple_web_server/src/: complex.rs  lib.rs  main.rs  simple.rs  test.rs
src/: main.rs
src/advance/: closure.rs  global.rs  iterator.rs  lifetime.rs  marco_demo.rs  mod.rs  newtype.rs  pointer.rs  ref_loop.rs  thread.rs  trust.rs
src/demo/: thread.rs
src/health/: mod.rs
src/learn/: borrow_checker.rs  builder.rs  color.rs  concurrency.rs  conversion.rs  error.rs  generic.rs  message.rs  mod.rs  reference.rs  trait_object.rs
src/minigrep/: lib.rs  mod.rs
timer_future/: Cargo.toml
timer_future/src/: lib.rs  main.rs
(+9 files in other folders)
