workspace = { members = ["demo_macro", "timer_future"] }

[package]
name = "rust_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
chrono = "*"
rand_distr = "*"
futures = "*"
demo_macro = { path = "./demo_macro" }
