workspace = { members = ["simple_macro", "timer_future", "simple_web_server", "simple_redis"] }

[package]
name = "rust_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
chrono = "*"
rand_distr = "*"
futures = "*"
simple_macro = { path = "./simple_macro" }
simple_web_server = { path = "./simple_web_server" }
